--- a/scss/application/elements/_action_bar.scss
+++ b/scss/application/elements/_action_bar.scss
@@ -22,7 +22,7 @@
   width: 100%;
   height: 80px;
 
-  background-color: $gray-lighter;
+  background-color: $solitude;
   color: $text-color;
   box-shadow: 0 0 10px 2px rgba(0,0,0,0.3);
   z-index: $z-index-action-bar;
