--- a/scss/application/elements/_avatars.scss
+++ b/scss/application/elements/_avatars.scss
@@ -121,7 +121,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Default color palette */
-  color: $gray-darker;
+  color: $charcoal;
   background-color: #cccccc;
 
   // &:before {
