--- a/scss/application/elements/_page_footer.scss
+++ b/scss/application/elements/_page_footer.scss
@@ -2,7 +2,7 @@
 
 .pageFooter {
   padding: 40px 0;
-  background-color: $gray-lighter;
+  background-color: $solitude;
   a {
     font-weight: 300;
   }
@@ -12,7 +12,7 @@
     color: $lime;
     padding: 5px 15px;
     &:hover {
-      color: $gray-darker;
+      color: $charcoal;
     }
   }
 }
