--- a/scss/application/elements/_video_card.scss
+++ b/scss/application/elements/_video_card.scss
@@ -150,7 +150,7 @@
   margin: 10px;
   overflow: hidden;
   box-sizing: border-box;
-  background-color: $gray-darker;
+  background-color: $charcoal;
   color: #ffffff;
   text-align: left;
   &:after {
