--- a/scss/application/elements/_zero_state.scss
+++ b/scss/application/elements/_zero_state.scss
@@ -37,7 +37,7 @@
   padding: 20px;
   text-align: center;
   background-color: transparent;
-  border: 1px solid $gray-lighter;
+  border: 1px solid $solitude;
   margin: 27px 0;
   h3 {
     font-size: 15px;
