--- a/scss/application/global/_buttons.scss
+++ b/scss/application/global/_buttons.scss
@@ -130,7 +130,7 @@ button {
 
 
 .collapseButton-moreLess {
-  color: $gray-darker;
+  color: $charcoal;
   font-weight: 600;
   &:before {
     display: inline-block;
