--- a/scss/application/global/_dropdowns.scss
+++ b/scss/application/global/_dropdowns.scss
@@ -18,7 +18,7 @@
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: $gray-darker;
+  background-color: $charcoal;
   border: none;
   border-radius: 0;
   box-shadow: 0 6px 12px rgba(0,0,0,0.175);
@@ -44,7 +44,7 @@
     height: 0;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
-    border-bottom: 8px solid $gray-darker;
+    border-bottom: 8px solid $charcoal;
   }
 }
 
@@ -64,7 +64,7 @@
     overflow: scroll;
     ul {
       display: block !important;
-      background: $gray-darker;
+      background: $charcoal;
       border: none;
       li {
         line-height: 1.2;
