--- a/scss/application/global/_lists.scss
+++ b/scss/application/global/_lists.scss
@@ -99,7 +99,7 @@ ul {
       }
       strong {
         font-weight: 300;
-        color: $gray-darker;
+        color: $charcoal;
       }
   }
   &.bullets {
