--- a/scss/application/global/_navs.scss
+++ b/scss/application/global/_navs.scss
@@ -19,7 +19,7 @@
       padding: 8px;
     }
     a {
-      color: $gray-darker;
+      color: $charcoal;
       padding: 0;
       &:after {
         position: absolute;
