--- a/scss/application/views/_landing.scss
+++ b/scss/application/views/_landing.scss
@@ -10,7 +10,7 @@
     li {
       counter-increment: step-counter;
       display: inline;
-      color: $gray-darker;
+      color: $charcoal;
       font-size: 30px;
       font-weight: 200;
       margin-right: 16px;
