--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -9,12 +9,11 @@
 //   <li class="bg-cream">Cream</li>
 // </ul>
 // <ul class="colorGrid">
-//   <li class="bg-gray-darker">Gray Darker</li>
+//   <li class="bg-charcoal">Charcoal</li>
 //   <li class="bg-gray-dark">Gray Dark</li>
 //   <li class="bg-gray">Gray</li>
-//   <li class="bg-silver">Silver</li>
 //   <li class="bg-gray-light">Gray Light</li>
-//   <li class="bg-gray-lighter">Gray Lighter</li>
+//   <li class="bg-solitude">Gray Lighter</li>
 // </ul>
 // 
 // 
