--- a/scss/elements/_blockquotes.scss
+++ b/scss/elements/_blockquotes.scss
@@ -61,7 +61,7 @@ blockquote{
     cursor: pointer;
     color: $brand-primary;
     &:hover{
-     color: $gray-darker;
+     color: $charcoal;
     }
   }
 }
