--- a/scss/application/elements/_subtitles_list.scss
+++ b/scss/application/elements/_subtitles_list.scss
@@ -13,7 +13,7 @@ ul.subtitlesList {
     width: 100%;
     padding: 10px 0;
     &:nth-of-type(odd) {
-      background-color: $gray-lighter;
+      background-color: $solitude;
     }
     .subtitlesList-time {
       margin: 0 10px;
