--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -84,7 +84,7 @@ label {
   max-width: 100%;
   margin-bottom: 0;
   font-weight: 600;
-  color: $gray-darker;
+  color: $charcoal;
 }
 textarea {
   resize: vertical;
@@ -103,9 +103,9 @@ textarea {
   width: 100%;
   padding: 8px 10px;
   margin: 0;
-  border: 1px solid $silver;
+  border: 1px solid $gray-light;
   background-color: #fff;
-  color: $gray-darker;
+  color: $charcoal;
   &:focus {
     outline: none;
   }
@@ -161,7 +161,7 @@ textarea {
 .buttonFile {
   position: relative;
   overflow: hidden;
-  border: 1px solid $silver;
+  border: 1px solid $gray-light;
   border-left-width: 0;
   padding: 8px 10px;
   line-height: 21px;
@@ -396,7 +396,7 @@ input:checked + label .checkbox-icon {
   display: block;
   margin-top: 4px;
   font-size: $font-size-tiny;
-  color: $gray-darker;
+  color: $charcoal;
 }
 
 .helpBlock-radio {
@@ -407,7 +407,7 @@ input:checked + label .checkbox-icon {
 .helpList {
   margin-left: 24px;
   font-size: $font-size-tiny;
-  color: $gray-darker;
+  color: $charcoal;
   list-style-type: disc;
   list-style-position: inside;
 }
@@ -464,13 +464,13 @@ fieldset {
 legend {
   margin-bottom: 12px;
   border-bottom: 1px solid $gray-light;
-  color: $gray-darker;
+  color: $charcoal;
 }
 
 .fieldsetHelpBlock {
   margin-top: -8px;
   font-size: $font-size-tiny;
-  color: $gray-darker;
+  color: $charcoal;
   margin-bottom: 16px;
   font-style: italic;
 }
