--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -16,7 +16,7 @@
 #topnav {
   position: relative;
   height: 30px;
-  background: $gray-darker;
+  background: $charcoal;
   @include transition(.5s);
   ul {
     list-style: none;
@@ -49,7 +49,7 @@
         display: block;
         background-color: #fff;
         background-image: none;
-        color: $gray-darker;
+        color: $charcoal;
         @include transition(.3s);
         text-transform: none;
         padding: 4px 20px;
@@ -158,7 +158,7 @@ a.topnav-button, button.topnav-button {
   font-family: $headings_font_family;
   line-height: 30px;
   color: #fff;
-  background-color: $gray-darker;
+  background-color: $charcoal;
   text-transform: uppercase;
   font-weight: 400;
   @include transition(0.4s);
@@ -172,7 +172,7 @@ a.topnav-button, button.topnav-button {
   }
 
   &.gray {
-    background-color: $gray-lighter;
+    background-color: $solitude;
     color: $plum;
     &:visited {
       color: $plum;
@@ -233,7 +233,7 @@ a.topnav-button, button.topnav-button {
           height: 68px;
           line-height: 68px;
           padding: 0 12px;
-          color: $gray-darker;
+          color: $charcoal;
           font-size: 17px;
           font-weight: 400;
           &:hover, &:focus {
@@ -341,7 +341,7 @@ a.topnav-button, button.topnav-button {
       li {
         display: block;
         width: 100%;
-        border-bottom: 1px solid $gray-lighter;
+        border-bottom: 1px solid $solitude;
         &:last-child {
           border: none;
         }
@@ -349,10 +349,10 @@ a.topnav-button, button.topnav-button {
           display: block;
           padding: 20px;
           background-color: #fff;
-          color: $gray-darker;
+          color: $charcoal;
           font-weight: 400;
           &:hover, &:focus {
-            background-color: $gray-lighter;
+            background-color: $solitude;
           }
         }
       }
@@ -368,7 +368,7 @@ a.topnav-button, button.topnav-button {
       li {
         display: block;
         width: 100%;
-        border-bottom: 1px solid $gray-lighter;
+        border-bottom: 1px solid $solitude;
       }
     }
     .dropdown-menu {
@@ -380,7 +380,7 @@ a.topnav-button, button.topnav-button {
       li {
         display: block;
         width: 100%;
-        border-bottom: 1px solid $gray-lighter;
+        border-bottom: 1px solid $solitude;
         &:last-child {
           border: none;
         }
