One more color update
- Use the light/dark functions rather than $gray-light and $gray-dark.
  This makes things more consistent
- Renamed "solidute" to "snow" to match the design docs

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,6 @@
 $charcoal:               #222626;
 $gray:                   #9fa0a1;
-$gray-dark:              dark($gray);
-$gray-light:             light($gray);
-$solitude:               #F3F4F6;
+$snow:               #F3F4F6;
 $white:                  #FFFFFF;
 
 $plum:                   #5a2747;
@@ -22,9 +20,7 @@ $colorscheme: (
 
   "charcoal": ($charcoal, $white),
   "gray": ($gray, $white),
-  "gray-dark": ($gray-dark, $white),
-  "gray-light": ($gray-light, $charcoal),
-  "solitude": ($solitude, $plum),
+  "snow": ($snow, $plum),
   "white": ($white, $gray),
 );
 
