--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -6,14 +6,12 @@
 //   <li class="bg-amaranth">Amaranth</li>
 //   <li class="bg-lime">Lime</li>
 //   <li class="bg-sea-green">Sea Green</li>
-//   <li class="bg-cream">Cream</li>
 // </ul>
 // <ul class="colorGrid">
 //   <li class="bg-charcoal">Charcoal</li>
-//   <li class="bg-gray-dark">Gray Dark</li>
 //   <li class="bg-gray">Gray</li>
-//   <li class="bg-gray-light">Gray Light</li>
-//   <li class="bg-solitude">Gray Lighter</li>
+//   <li class="bg-snow">Solitude</li>
+//   <li class="bg-cream">Cream</li>
 // </ul>
 // 
 // 
