--- a/scss/elements/_video-subtitles-list.scss
+++ b/scss/elements/_video-subtitles-list.scss
@@ -18,7 +18,7 @@
 // Styleguide videoSubtitlesList
 
 .videoSubtitlesList-heading {
-  border-bottom: 1px solid $gray-light;
+  border-bottom: 1px solid light($gray);
 }
 
 .videoSubtitlesList-item {
