--- a/scss/application/elements/_comments.scss
+++ b/scss/application/elements/_comments.scss
@@ -3,7 +3,7 @@ ul.comments {
     position: relative;
     padding: 10px 0;
     &:nth-of-type(odd) {
-      background-color: $solitude;
+      background-color: $snow;
     }
     &:last-child {
       background-color: #fff;
@@ -38,7 +38,7 @@ ul.comments {
         color: $text-color;
         background-color: #fff;
         background-image: none;
-        border: 1px solid $gray-light;
+        border: 1px solid light($gray);
         box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
         transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
       }
