--- a/scss/application/elements/_dialogs.scss
+++ b/scss/application/elements/_dialogs.scss
@@ -237,7 +237,7 @@
   .modal-content {
     position: relative;
     padding: 20px;
-    background-color: $solitude;
+    background-color: $snow;
     // TODO - remove form specific styles from here. These should be refadtored and added to other stylesheets
     form {
       margin-bottom: 0;
@@ -250,11 +250,11 @@
         padding: 5px 16px;
         margin-bottom: 10px;
         background: #ffffff;
-        border: 1px solid $gray-light;
-        color: $gray-light;
+        border: 1px solid light($gray);
+        color: light($gray);
         &:after { display: none; }
         .select2-selection__rendered { display: block; color: $gray; }
-        .select2-selection__rendered:after { float: right; color: $gray-light; }
+        .select2-selection__rendered:after { float: right; color: light($gray); }
       }
     }
     .button {
@@ -280,7 +280,7 @@
     font-size: 12px;
     font-weight: 500;
     line-height: 1.0;
-    color: $gray-dark;
+    color: dark($gray);
     @include clamp(1, 1.0);
   }
 
