--- a/scss/application/global/_base.scss
+++ b/scss/application/global/_base.scss
@@ -37,7 +37,7 @@ a {
   }
   &.disabled {
     cursor: default;
-    color: $gray-light;
+    color: light($gray);
     pointer-events: none;
   }
   &.text {
@@ -62,7 +62,7 @@ ul, ol {
 hr {
   margin-top: 10px;
   margin-bottom: 10px;
-  border-top-color: $solitude;
+  border-top-color: $snow;
 }
 
 
@@ -90,14 +90,6 @@ hr {
 
 // TODO - Sort
 
-// Color Palette
-.gray-light {
-  background-color: $gray-light;
-}
-.solitude {
-  background-color: $solitude;
-}
-
 .profileWell {
   min-height: 20px;
   padding: 10px;
@@ -105,8 +97,8 @@ hr {
   border: none;
   border-radius: 0px;
   box-shadow: none;
-  background-color: $solitude;
-  color: $gray-dark;
+  background-color: $snow;
+  color: dark($gray);
   .icon.icon-mail {
     margin-left: 15px;
     font-size: 22px;
@@ -123,7 +115,7 @@ hr {
   }
   h3, h4 { color: $charcoal; }
   hr {
-    border-top: 1px solid $gray-light;
+    border-top: 1px solid light($gray);
     margin: 1rem -10px;
   }
 }
