--- a/scss/elements/_filters.scss
+++ b/scss/elements/_filters.scss
@@ -82,7 +82,7 @@
   }
 }
 .filterList-heading {
-  background: $gray-light;
+  background: light($gray);
   padding: 10px;
   margin-top: 0;
   color: $plum;
