--- a/scss/elements/_sitemap.scss
+++ b/scss/elements/_sitemap.scss
@@ -7,12 +7,12 @@
   min-width: 100%;
   padding: 0 40px;
   .primary {
-    // > ul { border-left: 5px solid $gray-light; }
+    // > ul { border-left: 5px solid light($gray); }
   }
   .secondary {
     padding-top: 30px;
     margin-top: 30px;
-    border-top: 1px solid $gray-light;
+    border-top: 1px solid light($gray);
   }
   ul {
     padding: 0;
@@ -26,7 +26,7 @@
         font-size: 20px;
         font-weight: 400;
         color: $plum;
-        border-left: 5px solid $gray-light; 
+        border-left: 5px solid light($gray); 
         text-transform: uppercase;
         i {
           font-size:13px;
@@ -39,7 +39,7 @@
           text-indent: 5px;
           font-size: 10px;
           word-wrap: break-word;
-          color: $gray-dark;
+          color: dark($gray);
         }
         &:hover, &:focus {
           background-color: rgba(0,0,0,0.01);
