Changed member details width

--- a/scss/elements/_select_list.scss
+++ b/scss/elements/_select_list.scss
@@ -301,7 +301,7 @@ ul.selectList {
     margin-right: 5px;
   }
   .selectList-memberDetails {
-    width: 280px;
+    width: 35em;
   }
 
   .selectList-itemActions {
