--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -517,13 +517,13 @@ legend {
   }
   &.cta {
     color: #fff;
-    background-color: $plum;
-    border-color: $plum;
+    background-color: $teal;
+    border-color: $teal;
   }
   &.cta-reverse {
-    color: $plum;
+    color: $teal;
     background-color: transparent;
-    border-color: $plum;
+    border-color: $teal;
   }
   &.inline {
     display: inline-block;
