--- a/scss/application/global/_tabs.scss
+++ b/scss/application/global/_tabs.scss
@@ -36,7 +36,7 @@ ul.nav-tabs {
       border: none;
       border-bottom: 2px solid transparent;
       font-weight: 300;
-      color: $teal;
+      color: $plum;
       background-color: transparent;
       &:hover, &:focus {
         background-color: transparent;
@@ -46,16 +46,16 @@ ul.nav-tabs {
     &.active {
       a {
         border: none;
-        border-bottom: 2px solid $teal;
+        border-bottom: 2px solid $plum;
         outline: none;
-        color: $teal;
+        color: $plum;
         font-weight: 600;
         background-color: transparent;
         &:hover, &:focus, &:active {
-          color: $teal;
+          color: $plum;
           font-weight: 600;
           border: none;
-          border-bottom: 2px solid $teal;
+          border-bottom: 2px solid $plum;
           background-color: transparent;
         }
       }
