Active navbar links are now clickable

--- a/scss/elements/_navigation.scss
+++ b/scss/elements/_navigation.scss
@@ -228,8 +228,8 @@ a.topnav-button, button.topnav-button {
           a {
             font-weight: 700;
             color: $teal;
-            cursor: default;
-            pointer-events: none;
+            //cursor: pointer;
+            //pointer-events: none;
           }
         }
         a {
