--- a/scss/application.scss
+++ b/scss/application.scss
@@ -49,7 +49,7 @@
 @import 'application/elements/action_bar';
 @import 'elements/filters';
 @import 'application/elements/comments';
-@import 'application/elements/pagination';
+@import 'elements/pagination';
 @import 'application/elements/hanging_links';
 @import 'application/elements/clamp';
 @import 'application/elements/switches';
