More style changes based on Maggie's review

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -497,6 +497,7 @@ legend {
   cursor: pointer;
   color: #fff;
   background-color: $teal;
+  margin-right: 4px;
   border: 1px solid $teal;
   &.block {
     display: block;
