--- a/scss/layout/_page_footer.scss
+++ b/scss/layout/_page_footer.scss
@@ -7,7 +7,7 @@
   }
   a {
     font-weight: 400;
-    color: $charcoal;
+    color: $plum;
     &:hover {
       color: $lime;
       background-color: transparent;
