Updating tab styles and adding vertical tabs
Merged marketing/application styles into 1 file

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -27,7 +27,7 @@
 @import 'application/global/grid';
 
 @import 'application/global/buttons';
-@import 'application/global/tabs';
+@import 'elements/tabs';
 @import 'application/global/navs';
 @import 'application/global/dropdowns';
 @import 'application/global/lists';
