--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -10,7 +10,7 @@
 // <ul class="colorGrid">
 //   <li class="bg-charcoal">Charcoal</li>
 //   <li class="bg-gray">Gray</li>
-//   <li class="bg-snow">Solitude</li>
+//   <li class="bg-snow">Snow</li>
 //   <li class="bg-cream">Cream</li>
 // </ul>
 // 
