Updating sea-green color
The new one is based off the comps that Tom did for the videos/create
page.  I think it looks nicer there and we don't really use it in other
places, so let's make the change.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,13 +1,13 @@
 $charcoal:               #222626;
 $gray:                   #9fa0a1;
-$snow:               #F3F4F6;
+$snow:                   #F3F4F6;
 $white:                  #FFFFFF;
 
 $plum:                   #5a2747;
 $teal:                   #30957b;
 $amaranth:               #f3254d;
 $lime:                   #80bd3e;
-$sea-green:              #38957c;
+$sea-green:              #30957b;
 $cream:                  #fffdf8;
 
 // Map color names to tuples of (color, alternate_color) where alternate_color is the text color to use when color is the background
