Moved list CSS to the shared area

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -30,7 +30,7 @@
 @import 'elements/tabs';
 @import 'application/global/navs';
 @import 'application/global/dropdowns';
-@import 'application/global/lists';
+@import 'elements/lists';
 
 @import 'elements/forms';
 @import 'application/global/progressbars';
